Fixing plugins needs to cause XPTI to be refreshed when pluigins change, bug 154272 r=av sr=jband